서현 최종 커밋

--- a/src/main/resources/static/css/community/free-create.css
+++ b/src/main/resources/static/css/community/free-create.css
@@ -158,7 +158,7 @@ div{
     margin: auto;
 }
 .title-label{
-    width: 52%;
+    width: 74%;
     padding: 1.25rem 0;
     margin: 0;
     display: inline-block;
@@ -393,6 +393,7 @@ div{
     margin-left: 16px;
 }
 .choce1-btn{
+    border: 0;
     padding-left: 16px;
     padding-right: 16px;
     border-radius: 20px;
@@ -410,6 +411,7 @@ div{
     background-color: #f3f3f4;
 }
 .choce2-btn{
+    border: 0;
     padding-left: 16px;
     padding-right: 16px;
     border-radius: 20px;
