--- a/src/main/resources/templates/community/review-detail.html
+++ b/src/main/resources/templates/community/review-detail.html
@@ -6,179 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>심봉사 | 활동 후기 상세페이지</title>
     <link rel="stylesheet" href="../../static/css/font/font.css">
-    <link rel="stylesheet" href="../../static/css/community/review-detail.css">
-    <link rel="stylesheet" href="../../static/css/main/header.css">
+    <link rel="stylesheet" href="../../static/css/community/free-detail.css">
 </head>
 <body>
     <!-- 헤더 -->
-    <!-- 로그인시 -->
-    <div class="full-screen">
-        <header class="header-layout">
-            <div class="header-wrapper">
-                <div class="header-upper-layout">
-                    <div class="logo-wrapper"></div>
-                    <div class="status-wrapper">
-                        <div class="button-wrapper">
-                            <div class="icon-wrapper">
-                                <svg class="search-icon">
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M29.9979 32.9819C27.3165 34.9694 23.9582 36.0788 20.3642 35.9089C12.0892 35.5176 5.69811 28.4922 6.08938 20.2171C6.48064 11.9421 13.5061 5.55107 21.7811 5.94234C30.0561 6.33361 36.4472 13.359 36.0559 21.6341C35.889 25.1636 34.5152 28.3505 32.3522 30.8144L39.4908 38.6856L37.1205 40.8353L29.9979 32.9819ZM32.6597 21.4735C32.3571 27.8728 26.9241 32.8152 20.5248 32.5127C14.1254 32.2101 9.183 26.7771 9.48558 20.3777C9.78816 13.9784 15.2212 9.03597 21.6205 9.33855C28.0199 9.64113 32.9623 15.0741 32.6597 21.4735Z" fill="black"></path>
-                                </svg>
-                            </div>
-                        </div>
-                        <div class="header-button">후원하기</div>
-                        <div class="button-wrapper">
-                            <div class="icon-wrapper">
-                                <svg class="like-icon" width="48" height="48" fill="none">
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M23.9996 13.623L20.6051 10.5561C17.2106 7.48978 11.57 8.17753 8.48147 11.5785C4.60233 15.6667 4.60214 22.5859 8.70675 26.9121L24 41.8811L39.2923 26.9121C43.3969 22.5859 43.3971 15.6675 39.5176 11.5785C36.4291 8.17753 30.7888 7.48991 27.3942 10.5561L23.9996 13.623ZM37.0081 24.6701C39.9446 21.533 39.8523 16.5805 37.1962 13.781L37.1721 13.7556L37.1487 13.7298C35.0533 11.4225 31.4219 11.2305 29.5394 12.9306L23.9996 17.9356L18.4601 12.9308C16.5777 11.2306 12.9458 11.4224 10.8504 13.7298L10.8269 13.7557L10.8028 13.7811C8.14716 16.5799 8.05453 21.533 10.9909 24.6701L23.9999 37.4033L37.0081 24.6701Z" fill="black"></path>
-                                </svg>
-                            </div>
-                        </div>
-                        <div class="button-wrapper">
-                            <div class="icon-wrapper">
-                                <svg class="notification-icon" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M10.7501 3.5C10.6121 3.5 10.5001 3.61193 10.5001 3.75V4.16109C7.35495 4.84777 5.00013 7.64889 5.00013 11V14.6875L4.53246 18.7212C4.51524 18.8697 4.63131 19 4.78079 19H19.2195C19.369 19 19.485 18.8697 19.4678 18.7212L19.0001 14.6875V11C19.0001 7.64888 16.6453 4.84775 13.5001 4.16109V3.75C13.5001 3.61193 13.3882 3.5 13.2501 3.5H10.7501ZM6.29636 17.4L6.60013 14.7799V11C6.60013 8.01766 9.01779 5.6 12.0001 5.6C14.9825 5.6 17.4001 8.01766 17.4001 11V14.7799L17.7039 17.4H6.29636Z" fill="#191919"></path>
-                                    <path d="M10.0001 20H14.5001C14.5001 20.8284 13.8285 21.5 13.0001 21.5H11.5001C10.6717 21.5 10.0001 20.8284 10.0001 20Z" fill="#191919"></path>
-                                </svg> 
-                            </div>
-                        </div>
-                        <div class="login-user-button-wrapper">
-                            <div class="user-button-layout">
-                                <div style="margin:0; padding:0;" class="user-avatar">
-                                    <span style="margin:0;padding:0;" class="profile-img"></span>
-                                </div>
-                                <div class="user-text">주연</div>
-                            </div>
-                        </div>
-                        <div id="show">
-                            <!-- JS로 처리 -->
-                            <!-- <div class="my-user-wrapper">
-                                <div class="user-menu-list">
-                                    <div class="menu-item">프로필</div>
-                                    <div class="menu-item">응원권</div>
-                                    <div class="menu-item-divider"></div>
-                                    <div class="menu-item">후원현황</div>
-                                    <div class="menu-item">관심 프로젝트</div>
-                                    <div class="menu-item">팔로우</div>
-                                    <div class="menu-item-divider"></div>
-                                    <div class="menu-item">알림</div>
-                                    <div class="menu-item">메시지</div>
-                                    <div class="menu-item-divider"></div>
-                                    <div class="menu-item">내가 만든 프로젝트</div>
-                                    <div class="menu-item">설정</div>
-                                    <div class="menu-item-divider"></div>
-                                    <div class="menu-item">로그아웃</div>
-                                </div>
-                            </div>
-                            <div class="user-dimmed-layout"></div> -->
-                        </div>
-                    </div>
-                </div>
-                <div class="header-content-layout">
-                    <div class="search-bar">
-                        <div class="category-section">
-                            <div class="category-wrapper category-extend-select" style="padding:0%">
-                                <div class="icon-wrapper" style="margin: 0px 8px 0px 0px;">
-                                    <div class="menu-icon"></div>
-                                </div>
-                                카테고리
-                            </div>
-                            <div class="category-wrapper category-select">홈</div>
-                            <div class="category-wrapper">후원</div>
-                            <div class="category-wrapper">펀딩</div>
-                            <div class="category-wrapper">커뮤니티</div>
-                            <div class="category-wrapper">캘린더</div>
-                            <div class="category-wrapper">복지센터</div>
-                            <div class="category-wrapper">심봉사소개</div>
-                        </div>
-                        <div class="search-input-wrapper">
-                            <input class="search-input" type="text" placeholder="검색어를 입력해주세요.">
-                            <div class="search-button">
-                                <svg class="search-icon" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M29.9979 32.9819C27.3165 34.9694 23.9582 36.0788 20.3642 35.9089C12.0892 35.5176 5.69811 28.4922 6.08938 20.2171C6.48064 11.9421 13.5061 5.55107 21.7811 5.94234C30.0561 6.33361 36.4472 13.359 36.0559 21.6341C35.889 25.1636 34.5152 28.3505 32.3522 30.8144L39.4908 38.6856L37.1205 40.8353L29.9979 32.9819ZM32.6597 21.4735C32.3571 27.8728 26.9241 32.8152 20.5248 32.5127C14.1254 32.2101 9.183 26.7771 9.48558 20.3777C9.78816 13.9784 15.2212 9.03597 21.6205 9.33855C28.0199 9.64113 32.9623 15.0741 32.6597 21.4735Z" fill="black"></path></svg>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="extended-category-section category-extend-select">
-                        <div class="extended-categeory-header">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0446 10.5249L6.49306 5L5.02166 6.46433L10.5732 11.9892L5 17.5357L6.4714 19L12.0446 13.4536L17.5286 18.9112L19 17.4468L13.516 11.9892L18.9783 6.55317L17.5069 5.08884L12.0446 10.5249Z" fill="#0D0D0D"></path>
-                            </svg>
-                        </div>
-                        <div class="category-container">
-                            <div class="style-depth-category-wrapper">
-                                <div class="depth-category-group">
-                                    <div class="depth-category">
-                                        <div class="depth-category-icon">
-                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
-                                        </div>
-                                        <div class="depth-category-text">전체</div>
-                                    </div>
-                                    <div class="depth-category">
-                                        <div class="depth-category-icon">
-                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
-                                        </div>
-                                        <div class="depth-category-text">보드게임</div>
-                                    </div>
-                                    <div class="depth-category">
-                                        <div class="depth-category-icon">
-                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
-                                        </div>
-                                        <div class="depth-category-text">디지털게임</div>
-                                    </div>
-                                    <div class="depth-category">
-                                        <div class="depth-category-icon">
-                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
-                                        </div>
-                                        <div class="depth-category-text">웹툰만화</div>
-                                    </div>
-                                    <div class="depth-category">
-                                        <div class="depth-category-icon">
-                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
-                                        </div>
-                                        <div class="depth-category-text">웹툰리소스</div>
-                                    </div>
-                                </div>
-                                <div class="depth-category-group"></div>
-                                <div class="depth-category-group"></div>
-                                <div class="depth-category-group"></div>
-                                <div class="depth-category-group"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
-    </div>
+    <header id="_header"></header>
 
-
-    <!-- 로그아웃시 -->
-    <!-- <div class="full-screen">
-        <header class="header-layout">
-            <div class="header-wrapper">
-                <div class="header-upper-layout">
-                    <div class="logo-wrapper"></div>
-                    <div class="status-wrapper">
-                        <div class="button-wrapper">
-                            <div class="icon-wrapper">
-                                <svg class="search-icon">
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M29.9979 32.9819C27.3165 34.9694 23.9582 36.0788 20.3642 35.9089C12.0892 35.5176 5.69811 28.4922 6.08938 20.2171C6.48064 11.9421 13.5061 5.55107 21.7811 5.94234C30.0561 6.33361 36.4472 13.359 36.0559 21.6341C35.889 25.1636 34.5152 28.3505 32.3522 30.8144L39.4908 38.6856L37.1205 40.8353L29.9979 32.9819ZM32.6597 21.4735C32.3571 27.8728 26.9241 32.8152 20.5248 32.5127C14.1254 32.2101 9.183 26.7771 9.48558 20.3777C9.78816 13.9784 15.2212 9.03597 21.6205 9.33855C28.0199 9.64113 32.9623 15.0741 32.6597 21.4735Z" fill="black"></path>
-                                </svg>
-                            </div>
-                        </div>
-                        <div class="header-button">후원하기</div>
-                        <div class="login-user-button-wrapper">
-                            <div class="user-button-layout">
-                                <div class="user-avatar">
-                                    <svg class="avatar-icon">
-                                        <path class="avatar-icon-svg-path" d="M41.8081 40.2C40.6938 32.1539 34.8597 26 27.852 26H20.1498C13.1405 26 7.30625 32.1539 6.19186 40.2C6.06567 41.1111 6 42.0465 6 43H42C42 42.0465 41.9343 41.1111 41.8081 40.2Z" fill="#0D0D0D"></path>
-                                        <path class="avatar-icon-svg-path" d="M24 23C28.9639 23 33 18.9626 33 14C33 9.0374 28.9639 5 24 5C19.0379 5 15 9.0374 15 14C15 18.9626 19.0379 23 24 23Z" fill="#0D0D0D"></path>
-                                    </svg>
-                                </div>
-                                <div class="user-text">로그인/회원가입</div>
-                            </div>
-                        </div>
-                        <div id="show">
-                            <!-- JS로 처리 -->
-                            <!-- <div class="my-user-wrapper">
      <!-- 전체 div -->
      <div>
         <div style="background-color: #fff;">
@@ -631,4 +464,10 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 <script src="../../static/js/community/free-detail.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#_header').load('../main/header.html');
+        $('#_footer').load('../main/footer.html');
+    });
+</script>
 </html>
