--- a/src/main/resources/templates/funding/funding-gift.html
+++ b/src/main/resources/templates/funding/funding-gift.html
@@ -46,6 +46,41 @@
                                 </div>
                                 <ul>
                                     <li class="previewItem">만든 아이템이 없습니다</li>
+                                    <li class="previewItemStyel previewItemStyel">
+                                        <button type="button" value="7513af07-bd37-48b3-9cee-28f6c588d2a2" class="previewItemButton">
+                                            <strong>이건 도대체 ....</strong>
+                                            <span>주관식 옵션(1)</span>
+                                            <ul>
+                                                <li>이게 블락이야?</li>
+                                            </ul>
+                                        </button>
+                                        <button type="button" value="7513af07-bd37-48b3-9cee-28f6c588d2a2" class="removeButton">
+                                            <div name="delete" class="iconSVG">
+                                                <svg viewBox="0 0 48 48">
+                                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                                        d="M38.814 42.172C38.814 42.946 38.064 43.574 37.144 43.574H10.856C9.936 43.574 9.186 42.946 9.186 42.172V12.218H38.814V42.172ZM17.564 4.426L30.542 4.524V9.794H17.462L17.564 4.426ZM44.786 9.794H32.968V4.524C32.968 3.13 31.832 2 30.436 2H17.564C16.168 2 15.03 3.13 15.03 4.524V9.794H3.212C2.542 9.794 2 10.336 2 11.006C2 11.676 2.542 12.218 3.212 12.218H6.76V42.172C6.76 44.284 8.598 46 10.856 46H37.144C39.402 46 41.24 44.284 41.24 42.172V12.218H44.786C45.456 12.218 46 11.676 46 11.006C46 10.336 45.456 9.794 44.786 9.794ZM18.857 36.9338C19.527 36.9338 20.069 36.3918 20.069 35.7218V20.0738C20.069 19.4038 19.527 18.8618 18.857 18.8618C18.187 18.8618 17.645 19.4038 17.645 20.0738V35.7218C17.645 36.3918 18.187 36.9338 18.857 36.9338ZM30.3542 35.7218C30.3542 36.3918 29.8122 36.9338 29.1422 36.9338C28.4722 36.9338 27.9302 36.3918 27.9302 35.7218V20.0738C27.9302 19.4038 28.4722 18.8618 29.1422 18.8618C29.8122 18.8618 30.3542 19.4038 30.3542 20.0738V35.7218Z">
+                                                    </path>
+                                                </svg>
+                                            </div>
+                                        </button>
+                                    </li>
+                                    <li class="previewItemStyel">
+                                        <button type="button" value="9fe96cb2-6fda-42c5-98f1-0a098a861df1" class="previewItemButton"><strong>이건 블락이야?</strong><span>객관식 옵션(2)</span>
+                                            <ul>
+                                                <li>블락</li>
+                                                <li>블낙</li>
+                                            </ul>
+                                        </button><button type="button" value="9fe96cb2-6fda-42c5-98f1-0a098a861df1"
+                                            class="removeButton">
+                                            <div name="delete" class="iconSVG"><svg viewBox="0 0 48 48">
+                                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                                        d="M38.814 42.172C38.814 42.946 38.064 43.574 37.144 43.574H10.856C9.936 43.574 9.186 42.946 9.186 42.172V12.218H38.814V42.172ZM17.564 4.426L30.542 4.524V9.794H17.462L17.564 4.426ZM44.786 9.794H32.968V4.524C32.968 3.13 31.832 2 30.436 2H17.564C16.168 2 15.03 3.13 15.03 4.524V9.794H3.212C2.542 9.794 2 10.336 2 11.006C2 11.676 2.542 12.218 3.212 12.218H6.76V42.172C6.76 44.284 8.598 46 10.856 46H37.144C39.402 46 41.24 44.284 41.24 42.172V12.218H44.786C45.456 12.218 46 11.676 46 11.006C46 10.336 45.456 9.794 44.786 9.794ZM18.857 36.9338C19.527 36.9338 20.069 36.3918 20.069 35.7218V20.0738C20.069 19.4038 19.527 18.8618 18.857 18.8618C18.187 18.8618 17.645 19.4038 17.645 20.0738V35.7218C17.645 36.3918 18.187 36.9338 18.857 36.9338ZM30.3542 35.7218C30.3542 36.3918 29.8122 36.9338 29.1422 36.9338C28.4722 36.9338 27.9302 36.3918 27.9302 35.7218V20.0738C27.9302 19.4038 28.4722 18.8618 29.1422 18.8618C29.8122 18.8618 30.3542 19.4038 30.3542 20.0738V35.7218Z">
+                                                    </path>
+                                                </svg>
+                                            </div>
+                                        </button>
+                                    </li>
+
                                 </ul>
                             </div>
                         </div>
@@ -171,6 +206,94 @@
                                                     <div class="prefix"></div>
                                                 </div>
                                             </div>
+                                        </div>
+                                    </section>
+                                    <section class="sectionStyle">
+                                        <div class="labelWrap">
+                                            <button type="button" class="areaToolTip">
+                                                <p>옵션 항목</p>
+                                            </button>
+                                            <div class="toolTip">
+                                                <em class="close">
+                                                    <div name="close-1" class="iconSVG">
+                                                        <svg viewBox="0 0 48 48">
+                                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                                d="M45.1766 41.0846L28.1097 24.0186L45.1766 6.95266C46.2744 5.85485 46.2744 4.05843 45.1766 2.86082C44.0778 1.66321 42.2824 1.76401 41.0838 2.86082L24.0189 19.9268L6.95301 2.86082C5.8552 1.76401 4.05879 1.76401 2.86119 2.86082C1.66358 3.95863 1.76338 5.75605 2.86119 6.95266L19.9271 24.0186L2.86119 41.0846C1.76338 42.1834 1.76338 43.9788 2.86119 45.1774C3.95899 46.2742 5.7554 46.2742 6.95301 45.1774L24.0189 28.1104L41.0838 45.1774C42.1826 46.2742 43.979 46.2742 45.1766 45.1774C46.2744 43.9788 46.2744 42.1834 45.1766 41.0846Z">
+                                                            </path>
+                                                        </svg>
+                                                    </div>
+                                                </em>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <div class="inputWrapper">
+                                                <div class="inputGuideWrapper">
+                                                    <div
+                                                        class="textareaWrapper inputLengthCheck">
+                                                        <textarea placeholder="예) 각인할 메세지를 입력해주세요"
+                                                            class="textareaStyle textareaStyle"></textarea></div>
+                                                </div>
+                                                <div class="noticeArea">
+                                                    <p class="guideMsg"></p>
+                                                    <span class="countLength">0/100</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </section>
+                                    <section class="sectionStyle">
+                                        <div class="labelWrap">
+                                            <button type="button" class="areaToolTip">
+                                                <p>옵션 항목</p>
+                                            </button>
+                                            <div class="toolTip">
+                                                <em class="close">
+                                                    <div name="close-1" class="iconSVG"><svg viewBox="0 0 48 48">
+                                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                                d="M45.1766 41.0846L28.1097 24.0186L45.1766 6.95266C46.2744 5.85485 46.2744 4.05843 45.1766 2.86082C44.0778 1.66321 42.2824 1.76401 41.0838 2.86082L24.0189 19.9268L6.95301 2.86082C5.8552 1.76401 4.05879 1.76401 2.86119 2.86082C1.66358 3.95863 1.76338 5.75605 2.86119 6.95266L19.9271 24.0186L2.86119 41.0846C1.76338 42.1834 1.76338 43.9788 2.86119 45.1774C3.95899 46.2742 5.7554 46.2742 6.95301 45.1774L24.0189 28.1104L41.0838 45.1774C42.1826 46.2742 43.979 46.2742 45.1766 45.1774C46.2744 43.9788 46.2744 42.1834 45.1766 41.0846Z">
+                                                            </path>
+                                                        </svg></div>
+                                                </em></div>
+                                        </div>
+                                        <p>입력완료 후 Enter키를 누르면 옵션 항목이 생성됩니다.</p>
+                                        <div>
+                                            <div class="inputWrapper">
+                                                <div class="inputGuideWrapper">
+                                                    <div
+                                                        class="textareaWrapper inputLengthCheck">
+                                                        <textarea placeholder="옵션 항목을 입력해주세요. 예) 블랙-230mm, 블랙-240mm"
+                                                            class="textareaStyle"></textarea></div>
+                                                </div>
+                                                <div class="noticeArea">
+                                                    <p class="guideMsg">2개 이상의 옵션 항목을 만들어주세요</p><span
+                                                        class="countLength">0/100</span>
+                                                </div>
+                                            </div>
+                                            <section>
+                                                <span class="removableTag">
+                                                <span class="value">블락</span>
+                                                <button type="button" value="블락">
+                                                        <div name="close-1" class="iconSVG">
+                                                            <svg viewBox="0 0 48 48">
+                                                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                                                    d="M45.1766 41.0846L28.1097 24.0186L45.1766 6.95266C46.2744 5.85485 46.2744 4.05843 45.1766 2.86082C44.0778 1.66321 42.2824 1.76401 41.0838 2.86082L24.0189 19.9268L6.95301 2.86082C5.8552 1.76401 4.05879 1.76401 2.86119 2.86082C1.66358 3.95863 1.76338 5.75605 2.86119 6.95266L19.9271 24.0186L2.86119 41.0846C1.76338 42.1834 1.76338 43.9788 2.86119 45.1774C3.95899 46.2742 5.7554 46.2742 6.95301 45.1774L24.0189 28.1104L41.0838 45.1774C42.1826 46.2742 43.979 46.2742 45.1766 45.1774C46.2744 43.9788 46.2744 42.1834 45.1766 41.0846Z">
+                                                                </path>
+                                                            </svg>
+                                                        </div>
+                                                    </button>
+                                                </span>
+                                                <span class="removableTag">
+                                                    <span class="value">블낙</span>
+                                                <button type="button" value="블낙">
+                                                        <div name="close-1" class="iconSVG">
+                                                            <svg viewBox="0 0 48 48">
+                                                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                                                    d="M45.1766 41.0846L28.1097 24.0186L45.1766 6.95266C46.2744 5.85485 46.2744 4.05843 45.1766 2.86082C44.0778 1.66321 42.2824 1.76401 41.0838 2.86082L24.0189 19.9268L6.95301 2.86082C5.8552 1.76401 4.05879 1.76401 2.86119 2.86082C1.66358 3.95863 1.76338 5.75605 2.86119 6.95266L19.9271 24.0186L2.86119 41.0846C1.76338 42.1834 1.76338 43.9788 2.86119 45.1774C3.95899 46.2742 5.7554 46.2742 6.95301 45.1774L24.0189 28.1104L41.0838 45.1774C42.1826 46.2742 43.979 46.2742 45.1766 45.1774C46.2744 43.9788 46.2744 42.1834 45.1766 41.0846Z">
+                                                                </path>
+                                                            </svg>
+                                                        </div>
+                                                    </button>
+                                                </span>
+                                            </section>
                                         </div>
                                     </section>
                                     <div class="buttonWrap">
