--- a/src/main/resources/static/css/funding/funding-gift.css
+++ b/src/main/resources/static/css/funding/funding-gift.css
@@ -461,8 +461,108 @@ button[disabled], html input[disabled] {
     flex: 1 1 0%;
     margin: 0px 0px 0px 10px;
 }
-
-
-
-
-
+.textareaWrapper {
+    width: 100%;
+    min-height: auto;
+    border: 0px;
+    padding: 11px 0px;
+    font-weight: 400;
+    font-size: 14px !important;
+    line-height: 24px !important;
+    font-family: NotoSansKR, "SF Pro Text", "Segoe UI", "Helvetica Neue", Arial, sans-serif !important;
+}
+.inputLengthCheck {
+    border: 1px solid rgb(230, 230, 230);
+    border-radius: 1px;
+    padding: 12px;
+}
+.textareaStyle {
+    width: 100%;
+    height: 100%;
+    border: 0px;
+    padding: 0px;
+    resize: none;
+}
+.removableTag {
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    padding: 11px 4px 11px 10px;
+    position: relative;
+    border: 1px solid rgb(228, 228, 228);
+    background: rgb(255, 255, 255);
+    transition: all 0.3s ease 0s;
+    display: flex;
+    margin: 8px 0px 0px;
+    border-radius: 4px;
+}
+.removableTag:first-child {
+    margin-top: 0px;
+}
+.removableTag:first-child {
+    margin-top: 0px;
+}
+.removableTag button {
+    display: flex;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+    font-size: 8px;
+    overflow: hidden;
+    border: 0px;
+    background: rgb(252, 252, 252);
+    position: absolute;
+    top: 24px;
+    z-index: 10;
+    transform: translateY(-50%);
+    border-radius: 2px;
+    right: 18px;
+}
+.previewItemStyel {
+    padding: 0px;
+    list-style: none;
+    overflow: hidden;
+    min-height: 90px;
+    height: auto;
+    border-radius: 4px;
+    position: relative;
+    background: rgb(255, 255, 255);
+    border: 1px solid rgb(240, 240, 240);
+    box-sizing: border-box;
+    margin: 0px 0px 12px;
+}
+.previewItemStyel:last-child {
+    margin-bottom: 0px;
+}
+.previewItemButton {
+    width: 100%;
+    min-height: 90px;
+    padding: 24px 28px;
+    text-align: left;
+    box-sizing: border-box;
+    border: 0px;
+    background: transparent;
+}
+.removeButton {
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    width: 40px;
+    height: 32px;
+    border-radius: 4px;
+    font-weight: 400;
+    color: rgb(61, 61, 61);
+    position: absolute;
+    top: 24px;
+    right: 28px;
+    background: rgb(255, 255, 255);
+    border: 1px solid rgb(240, 240, 240);
+    font-size: 11px !important;
+    font-family: NotoSansKR, "SF Pro Text", "Segoe UI", "Helvetica Neue", Arial, sans-serif !important;
+    line-height: 32px !important;
+}
