--- a/src/main/resources/templates/funding/funding-project-plan.html
+++ b/src/main/resources/templates/funding/funding-project-plan.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/static/css/funding/funding-topContent-response.css">
     <link rel="stylesheet" href="/static/css/funding/funding.css">
     <link rel="stylesheet" href="/static/css/funding/response.css">
+    <!-- 웹에디터 API -->
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet" />
 </head>
 <style>
     .projectPlan::after {
@@ -46,17 +48,6 @@
                                 </svg>
                             </div>
                         </div>
-                        <div>
-                            <a class="ideaButton">
-                                <div name="lightbulb-line" class="icon-svg">
-                                    <svg viewBox="0 0 48 48">
-                                        <path fill-rule="evenodd" clip-rule="evenodd"
-                                            d="M30.469 28.1702L31.6199 27.382C34.3726 25.4967 36 22.2707 36 18.2036C36 12.2507 30.5846 7 24 7C17.4154 7 12 12.2507 12 18.2036C12 22.2707 13.6274 25.4967 16.3801 27.382L17.531 28.1702L18.6941 31.9412H29.3059L30.469 28.1702ZM32.2581 35.9412H15.7419L14.1198 30.6821C10.1084 27.9347 8 23.3701 8 18.2036C8 9.80689 15.4485 3 24 3C32.5515 3 40 9.80689 40 18.2036C40 23.3701 37.8916 27.9347 33.8802 30.6821L32.2581 35.9412Z">
-                                        </path>
-                                        <path d="M17 39H31V43H17V39Z"></path>
-                                    </svg></div>
-                                <p type="l3" color="#3d3d3d" class="textGuide">작성 가이드</p>
-                            </a></div>
                     </div>
                     <div class="storyWrapper">
                         <div class="guidewrapper">
@@ -77,50 +68,6 @@
                         </div>
                         <div class="editoerWrapper">
                             <div name="purpose" class="planSelection">
-                                <span class="rightButtonWrapper">
-                                    <div width="240" class="peakToolTipWrap">
-                                        <div class="peakToolTip">
-                                            <svg width="45" height="18" viewBox="0 0 45 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <rect width="45" height="18" rx="9" fill="#FDF4F3"></rect>
-                                                <path
-                                                    d="M8.91 13H10.31V10.04C10.31 9.18 10.19 8.25 10.12 7.46H10.17L10.92 9.04L13.06 13H14.57V5.6H13.16V8.55C13.16 9.39 13.28 10.38 13.36 11.15H13.31L12.56 9.55L10.41 5.6H8.91V13ZM16.4002 13H21.0502V11.76H17.8802V9.79H20.4702V8.54H17.8802V6.83H20.9402V5.6H16.4002V13ZM23.2526 13H25.0626L25.8726 9.34C25.9826 8.77 26.0926 8.19 26.1926 7.63H26.2326C26.3226 8.19 26.4226 8.77 26.5526 9.34L27.3726 13H29.2226L30.5926 5.6H29.1926L28.5926 9.21C28.4926 9.99 28.3726 10.78 28.2726 11.58H28.2226C28.0526 10.78 27.9126 9.98 27.7526 9.21L26.8926 5.6H25.6226L24.7726 9.21C24.6126 9.99 24.4526 10.78 24.3026 11.58H24.2626C24.1426 10.78 24.0326 9.99 23.9126 9.21L23.3326 5.6H21.8226L23.2526 13Z"
-                                                    fill="#F86453"
-                                                </path>
-                                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                                    d="M33 8.99999C34.0909 8.99999 36 7.0909 36 5.72726C36 7.0909 37.9091 8.99999 39 8.99999C37.9091 8.99999 36 10.9091 36 12.2727C36 10.9091 34.0909 8.99999 33 8.99999Z"
-                                                    fill="#F86453">
-                                                </path>
-                                            </svg>
-                                            <div class="toolTipContent">
-                                                <p>펀딩 계획 작성을 시작하기 막막하시다면, ChatGPT의 도움을 구해보세요.</p>
-                                            </div>
-                                            <button class="confirmButton">확인</button>
-                                            <div class="peak">
-                                                <svg width="16" height="12" viewBox="0 0 16 12" fill="none"
-                                                    xmlns="http://www.w3.org/2000/svg">
-                                                    <path
-                                                        d="M8.83205 10.7519C8.43623 11.3457 7.56377 11.3457 7.16795 10.7519L3.48799e-07 -4.35057e-07L16 -2.86102e-06L8.83205 10.7519Z"
-                                                        fill="white">
-                                                    </path>
-                                                </svg>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <button class="lineButton gptButton pdc-btn-l" color="gray80">ChatGPT로 초안 작성</button>
-                                    <div name="info-3" class="icon-svg" style="cursor: pointer;">
-                                        <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                                d="M6 11C8.76142 11 11 8.76142 11 6C11 3.23858 8.76142 1 6 1C3.23858 1 1 3.23858 1 6C1 8.76142 3.23858 11 6 11ZM6 12C9.31371 12 12 9.31371 12 6C12 2.68629 9.31371 0 6 0C2.68629 0 0 2.68629 0 6C0 9.31371 2.68629 12 6 12Z"
-                                                fill="#F86453">
-                                            </path>
-                                            <path
-                                                d="M6.06887 4.5C6.56802 4.5 6.93624 4.09904 6.93624 3.59171C6.93624 3.09257 6.56802 2.69161 6.06887 2.69161C5.56154 2.69161 5.2015 3.09257 5.2015 3.59171C5.2015 4.09904 5.56154 4.5 6.06887 4.5Z"
-                                                fill="#F86453">
-                                            </path>
-                                            <path d="M5.33333 5.33333H6.8V9H5.33333V5.33333Z" fill="#F86453"></path>
-                                        </svg>
-                                    </div>
-                                </span>
                                 <div>
                                     <button open="" class="accorationTitle">프로젝트 소개<i>
                                             <div name="arrow2-down" class="icon-svg">
@@ -133,29 +80,33 @@
                                         </i>
                                     </button>
                                     <div open="" class="toggleContent">
+                                        <p style="height: 40px;" class="styled__EditorDescription-upxyjo-1 editorDescription kGmObd">무엇을 만들기 위한 프로젝트인지 분명히 알려주세요.</p>
                                         <div class="editorPreview">
-                                            <div class="storyContent">
-                                                <p>막연하다면 아래의 질문에 대한 답이 내용에 포함되도록 작성해보세요.</p>
-                                                <p>Q. 무엇을 만들기 위한 프로젝트인가요?</p>
-                                                <p>Q. 프로젝트를 간단히 소개한다면?</p>
-                                                <p>Q. 이 프로젝트가 왜 의미있나요?</p>
-                                                <p>Q. 이 프로젝트를 시작하게 된 배경이 무엇인가요?</p>
-                                            </div>
+                                            <textarea id="projectIntroduction" name="editordata">
+                                                막연하다면 아래의 질문에 대한 답이 내용에 포함되도록 작성해보세요.<br><br>
+                                                Q. 무엇을 만들기 위한 프로젝트인가요?<br>
+                                                Q. 프로젝트를 간단히 소개한다면?<br>
+                                                Q. 이 프로젝트가 왜 의미있나요?<br>
+                                                Q. 이 프로젝트를 시작하게 된 배경이 무엇인가요?<br>
+                                            </textarea>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div name="budget" class="planSelection">
                                 <div><button open="" class="accorationTitle">프로젝트 예산<i>
-                                            <div name="arrow2-down" class="icon-svg"><svg
-                                                    viewBox="0 0 48 48">
+                                            <div name="arrow2-down" class="icon-svg">
+                                                <svg viewBox="0 0 48 48">
                                                     <path fill-rule="evenodd" clip-rule="evenodd"
                                                         d="M2 14.4065C2 13.1363 3.09843 12.0615 4.39657 12.0615C4.99571 12.0615 5.59485 12.257 6.09414 12.7455L23.9685 29.4526L41.843 12.6478C42.8415 11.7684 44.3394 11.7684 45.338 12.7455C46.2367 13.7226 46.2367 15.1882 45.2381 16.0676L23.9685 36L2.79886 16.0676C2.29957 15.6767 2 14.9928 2 14.4065Z">
                                                     </path>
-                                                </svg></div>
-                                        </i></button>
+                                                </svg>
+                                            </div>
+                                        </i>
+                                    </button>
                                     <div open="" class="toggleContent">
                                         <div class="editorPreview">
+                                            <p style="height: 40px;" class="styled__EditorDescription-upxyjo-1 editorDescription kGmObd">무엇을 만들기 위한 프로젝트인지 분명히 알려주세요.</p>
                                             <div class="storyContent">
                                                 <p>설정하신 목표 금액을 어디에 사용 예정이신지 구체적인 지출 항목으로 적어 주세요.</p>
                                                 <ul>
@@ -189,6 +140,7 @@
                                         </i></button>
                                     <div open="" class="toggleContent">
                                         <div class="editorPreview">
+                                            <p style="height: 40px;" class="styled__EditorDescription-upxyjo-1 editorDescription kGmObd">무엇을 만들기 위한 프로젝트인지 분명히 알려주세요.</p>
                                             <div class="storyContent">
                                                 <p>아래의 양식을 참고하여 작성해보세요.</p>
                                                 <p>( 예시 )</p>
@@ -223,6 +175,7 @@
                                     </button>
                                     <div open="" class="toggleContent">
                                         <div class="editorPreview">
+                                            <p style="height: 40px;" class="styled__EditorDescription-upxyjo-1 editorDescription kGmObd">무엇을 만들기 위한 프로젝트인지 분명히 알려주세요.</p>
                                             <div class="storyContent">
                                                 <span class="empty-content">작성된 내용이 없습니다</span></div>
                                         </div>
@@ -245,6 +198,7 @@
                                     </button>
                                     <div open="" class="toggleContent">
                                         <div class="editorPreview">
+                                            <p style="height: 40px;" class="styled__EditorDescription-upxyjo-1 editorDescription kGmObd">무엇을 만들기 위한 프로젝트인지 분명히 알려주세요.</p>
                                             <div class="storyContent"><span class="empty-content">작성된 내용이 없습니다</span></div>
                                         </div>
                                     </div>
@@ -264,5 +218,65 @@
         $("#_header").load("/templates/funding/funding-plan-header.html");
         $("#_topContent").load("/templates/funding/funding-topContent.html");
     });
+</script>
+<!-- 웹에디터 API -->
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
+<script>
+  $('#projectIntroduction').summernote({
+    placeholder: '',
+    tabsize: 2,
+    height: 300,
+    width: '100%',
+    toolbar: [
+      ['style', ['style']],
+      ['font', ['bold', 'underline', 'clear']],
+      ['color', ['color']],
+      ['para', ['ul', 'ol', 'paragraph']],
+      ['table', ['table']],
+      ['insert', ['link', 'picture', 'video']],
+    ],
+  });
+  $('#projectBudget').summernote({
+    placeholder: '',
+    tabsize: 2,
+    height: 300,
+    width: '100%',
+    toolbar: [
+      ['style', ['style']],
+      ['font', ['bold', 'underline', 'clear']],
+      ['color', ['color']],
+      ['para', ['ul', 'ol', 'paragraph']],
+      ['table', ['table']],
+      ['insert', ['link', 'picture', 'video']],
+    ],
+  });
+  $('#projectSchedule').summernote({
+    placeholder: '',
+    tabsize: 2,
+    height: 300,
+    width: '100%',
+    toolbar: [
+      ['style', ['style']],
+      ['font', ['bold', 'underline', 'clear']],
+      ['color', ['color']],
+      ['para', ['ul', 'ol', 'paragraph']],
+      ['table', ['table']],
+      ['insert', ['link', 'picture', 'video']],
+    ],
+  });
+  $('#projectGift').summernote({
+    placeholder: '',
+    tabsize: 2,
+    height: 300,
+    width: '100%',
+    toolbar: [
+      ['style', ['style']],
+      ['font', ['bold', 'underline', 'clear']],
+      ['color', ['color']],
+      ['para', ['ul', 'ol', 'paragraph']],
+      ['table', ['table']],
+      ['insert', ['link', 'picture', 'video']],
+    ],
+  });
 </script>
 </html>
