--- a/src/main/resources/templates/customerCenter/notice-detail.html
+++ b/src/main/resources/templates/customerCenter/notice-detail.html
@@ -68,7 +68,13 @@
     <!-- footer -->
 
         <footer></footer>
-    </div>    
+    </div>
+    
+    <div  class="inquiry-btn-layout">
+        <button id="" type="button" class="inquiry-btn-img-wrap">
+            <img alt="" src="https://cf.channel.io/pub-file/4577/63ed9fb2ee00b73e0edb/cs-icon-06.png" width="70.5" height="70.5" class="inquiry-btn-img">
+        </button>
+    </div>
 </body>
 <script>
     /* 외부 html 파일 불러오기 */
