문의하기 모달창 수정

--- a/src/main/resources/static/css/customerCenter/inquiry-write.css
+++ b/src/main/resources/static/css/customerCenter/inquiry-write.css
@@ -407,3 +407,14 @@
     margin: -9px 2px 0px 0px;
     border-radius: 8px;
 }
+
+input::placeholder {
+    font-size: 12px;
+    color:#d5d7db;
+
+}
+
+textarea::placeholder {
+    font-size: 12px;
+    color:#d5d7db;
+}
