--- a/src/main/resources/static/css/customerCenter/inquiry-write.css
+++ b/src/main/resources/static/css/customerCenter/inquiry-write.css
@@ -13,6 +13,9 @@
     transform: translate(0px, 0px);
     background-color: rgba(247, 247, 248, 0.9);
     backdrop-filter: blur(60px);
+    float: right;
+    margin-top: 16em;
+    margin-right: 20px;
 }
 
 .main-wrap{
